# Place-NeRFs

./: .gitignore  LICENSE  README.md  main.py  requirements.txt
gemscollide/: CMakeLists.txt  README.md  build.sh  dockerfile
gemscollide/cmake/: GEMSCOLLIDEConfig.cmake.in  GEMSCOLLIDEConfigVersion.cmake.in
gemscollide/cpp/example/: CMakeLists.txt  example.cpp
gemscollide/cpp/include/gemsiv/: collide.c  collide.cpp
gemscollide/python/example/: example.py
gemscollide/python/module/: collide.cpp
model/: place_nerfs.py
utils/: collide_utils.py  depth_utils.py  prepare2nerf.py
